[gd_scene load_steps=3 format=2]

[ext_resource path="res://Control.gd" type="Script" id=1]
[ext_resource path="res://SequenceDetector2.tscn" type="PackedScene" id=2]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.0
margin_right = -1.0
script = ExtResource( 1 )

[node name="PerformedSequences" type="ItemList" parent="."]
margin_left = 4.0
margin_top = 47.0
margin_right = 434.0
margin_bottom = 596.0

[node name="AvailableSequences" type="ItemList" parent="."]
margin_left = 569.0
margin_top = 48.0
margin_right = 1024.0
margin_bottom = 597.0

[node name="LabelPerformed" type="Label" parent="."]
margin_left = 2.0
margin_right = 434.0
margin_bottom = 44.0
text = "Performed"
align = 1
valign = 1

[node name="LabelAvailable" type="Label" parent="."]
margin_left = 572.0
margin_top = 2.0
margin_right = 1021.0
margin_bottom = 46.0
text = "Available"
align = 1
valign = 1

[node name="CheckBox" type="CheckBox" parent="."]
margin_left = 441.0
margin_top = 63.0
margin_right = 565.0
margin_bottom = 87.0
pressed = true
text = "consume input"

[node name="SequenceDetector" parent="." instance=ExtResource( 2 )]

